--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,9 +2,14 @@
 <html>
     <head>
         <title>Studentski dom</title>
-<link rel="stylesheet" href="stil.css">
+        <script src="https://smtpjs.com/v3/smtp.js"></script>
+       <script src="https://unpkg.com/jspdf-invoice-template@1.4.0/dist/index.js"></script>
+       <script src="https://unpkg.com/pdfjs@2.3.6/"></script>
+       <script src="https://unpkg.com/pdfjs-dist@2.16.105/build/pdf.js"></script>
+    <link rel="stylesheet" href="stil.css">
     </head>
     <body>
-<script src="main.js" type="module"></script>
+        
+        <script src="main.js" type="module" ></script>
     </body>
-</html>
+</html> 
